# FinSight

./: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: bootstrap-wiki.yml
docs/: ARCHITECTURE.md  DECISIONS.md
docs/wiki/: Architecture.md  Configuration.md  Development.md  Evaluation.md  Home.md
evals/: RESULTS.md  __init__.py  gate.py  harness.py  metrics.py
examples/: run_strategy.py
finsight/: __init__.py  cli.py  config.py  pipeline.py  types.py
finsight/backtest/: __init__.py  engine.py
finsight/data/: __init__.py  factory.py  loaders.py  synthetic.py
finsight/eventstudy/: __init__.py  study.py
finsight/sentiment/: __init__.py  base.py  factory.py  finbert.py  lexical.py  lexicon.py
finsight/signals/: __init__.py  factor.py
finsight/stats/: __init__.py  cpcv.py  deflated_sharpe.py  metrics.py
tests/: test_cli.py  test_eventstudy.py  test_pipeline.py  test_sentiment.py  test_stats.py
